[package]
name = "hackchat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[dependencies]
axum = "0.6.20"
axum_static = "1.2.2"
axum_typed_multipart = "0.9.0"
chrono = "0.4.31"
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
